--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
-    id 'com.google.gms.google-services' version '4.3.10' apply false
+    id 'com.google.gms.google-services' version '4.3.15' apply false
     id 'com.google.dagger.hilt.android' version '2.44' apply false
+    // Crashlytics Gradle plugin
+    id 'com.google.firebase.crashlytics' version '2.8.1' apply false
 }
