--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,18 @@
 buildscript {
     ext {
-        compose_ui_version = '1.1.1'
+        compose_ui_version = '1.4.0'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
     id 'com.google.gms.google-services' version '4.3.15' apply false
     id 'com.google.dagger.hilt.android' version '2.44' apply false
+    // for api key security
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin' version '2.0.1' apply false
     // Crashlytics Gradle plugin
     id 'com.google.firebase.crashlytics' version '2.8.1' apply false
+
+
 }
